update coisas sem testar
